fixed color and spacing

--- a/src/output.css
+++ b/src/output.css
@@ -732,6 +732,11 @@
       padding-inline: calc(var(--spacing) * 0);
     }
   }
+  .xl\:px-4 {
+    @media (width >= 1280px) {
+      padding-inline: calc(var(--spacing) * 4);
+    }
+  }
 }
 @font-face {
   font-family: "Red Hat Text";
